fixes z-index of product details image

--- a/src/components/Lookup/Lookup.scss
+++ b/src/components/Lookup/Lookup.scss
@@ -7,6 +7,8 @@
 	box-shadow: 0 10px 14px -8px $gray;
 	-webkit-box-shadow: 0 10px 14px -8px $gray;
 	-moz-box-shadow: 0 10px 14px -8px $gray;
+	position: relative;
+	z-index: 2;
 }
 
 .inlineForm {
