--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -7,10 +7,6 @@
     }
 }
 
-.rightSection {
-    padding: 10px;
-}
-
 .images {
     padding: 10px;
 }
